[FIX] web: m2o extra button misaligned on mobile

--- a/addons/web/static/src/scss/form_view.scss
+++ b/addons/web/static/src/scss/form_view.scss
@@ -562,10 +562,10 @@
             }
         }
 
-        :not(.o_row):not(.o_data_cell) > .o_field_widget,
-        .o_row > .o_field_widget:last-child { // Note: this does not take care
-                                              // of an invisible last-child but
-                                              // it does not really matter
+        :not(.o_row):not(.o_data_cell) > .o_field_widget {
+            // Note: this does not take care
+            // of an invisible last-child but
+            // it does not really matter
             // Makes extra buttons (e.g. m2o external button) overflow on the
             // right padding of the parent element
             .o_input_dropdown {
@@ -947,11 +947,6 @@
                     &.o_field_boolean {
                         margin-right: 0;
                     }
-                }
-
-                .o_input_dropdown {
-                    width: auto;
-                    max-width: 100%;
                 }
             }
         }
